syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "EmailProtos";

enum EmailRequestType {
	Email_List = 1;//邮件列表请求
	Email_Check = 2;//查看邮件
	Email_GetAttachment = 3;//提取附件
}

enum EmailResultType{
	SUCCESS = 1;
	FAIL = 2;
}

message EmailRequest {
	required EmailRequestType requestType = 1;
	optional string emailId = 2;//邮件ID
}

message EmailResponse{
	required EmailRequestType requestType = 1;//请求类型
	required EmailResultType resultType = 2;//结果类型
	repeated EmailInfo emailList = 3;//邮件列表
	optional EmailInfo emailInfo = 4;//单个邮件信息
	optional string failResult = 5;//结果
}

message EmailInfo{//邮件数据
	required string emailId = 1;//id
	required bool isReceive = 3;//是否已领取过附件
	required bool isChecked = 4;//是否为已读
	required int64 sendTime = 5;//发送日期
	required string title = 6;//标题
	required string content = 7;//内容
	required string sender = 8;//发送者
	required string checkIcon = 9;//已读图标
	required string subjectIcon = 10;//未读图标
	optional string emailAttachment = 11;//邮件附件
	optional string expirationTime = 12;//过期时间
}